# OBC-COMS

./: .gitignore  LICENSE  README.md
OBC-COMS/: .mxproject  CMakeLists.txt  OBC-COMS.ioc
OBC-COMS/Core/Inc/: gpdma.h  main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
OBC-COMS/Core/Src/: fdcan.c  gpdma.c  gpio.c  main.c  spi.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  usart.c
OBC-COMS/app/inc/: sx1280_task.h
OBC-COMS/app/src/: app_main.c  sd_task.c  startup_task.c  sx1280_task.c  uart_task.c
OBC-COMS/cmake/stm32cubemx/: CMakeLists.txt
OBC-COMS/modules/: CMakeLists.txt
OBC-COMS/modules/max2201/: CMakeLists.txt
OBC-COMS/modules/rfm95w/: CMakeLists.txt
OBC-COMS/modules/sd_card/: CMakeLists.txt
OBC-COMS/modules/sx1280/: CMakeLists.txt
OBC-COMS/modules/sx1280/inc/: radio.h  sx1280-hal.h  sx1280-radio-config.h  sx1280.h  sx1280_hal_wrapper.h
OBC-COMS/modules/sx1280/src/: sx1280-hal.c  sx1280-radio-config.c  sx1280.c  sx1280_hal_wrapper.c
